--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="centered-idea-page-element">
       <img src="./eisenhower-matrix.jpg">
       <a
           class="more-inf"
