--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="page">
     <div class="centered-idea-page-element">
       <img src="./eisenhower-matrix.jpg">
       <a
@@ -19,7 +19,7 @@
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task" class="task" type="text">
-          <button>Add</button>
+          <button class="add">Add</button>
         </div>
       </p>
       <h3>Todo</h3>
