--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       </a>
     </div>
     <div class="centered-main-page-element">
+      <section class="todo">
       <p id="top-section-for-adding-element-to-list">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
@@ -22,6 +23,8 @@
           <button class="add">Add</button>
         </div>
       </p>
+      </section>
+      <section class="todo">
       <h3>Todo</h3>
       <ul id="incomplete-tasks">
         <li>
@@ -39,6 +42,8 @@
           <button class="delete"><img src="./remove.svg" alt="Remove"></button>
         </li>
       </ul>
+      </section>
+      <section class="todo">
       <h3>Completed</h3>
       <ul id="completed-tasks">
         <li>
@@ -49,6 +54,7 @@
           <button class="delete"><img src="./remove.svg" alt="Remove"></button>
         </li>
       </ul>
+      </section>
     </div>
     <script src="app.js"></script>
   </body>
