refactor: adjust HTML-formatting according to rule 3.4 in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </p>
       </section>
       <section class="todo">
-        <h3>Todo</h3>
+        <h3 class="todo__header">Todo</h3>
         <ul id="incomplete-tasks">
           <li>
             <input type="checkbox">
@@ -44,7 +44,7 @@
         </ul>
       </section>
       <section class="todo">
-        <h3>Completed</h3>
+        <h3 class="todo__header">Completed</h3>
         <ul id="completed-tasks">
           <li>
             <input type="checkbox" checked>
