--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="centered-main-page-element">
       <section class="todo">
         <p id="top-section-for-adding-element-to-list">
-          <label for="new-task">Add Item</label>
+          <h3 class="todo__header">Add Item</h3>
           <div class="task-row-wrapper">
             <input id="new-task" class="task" type="text">
             <button class="add">Add</button>
