--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </section>
       <section class="todo">
         <h3 class="todo__header">Todo</h3>
-        <ul id="incomplete-tasks">
+        <ul class="todo__ul" id="incomplete-tasks">
           <li>
             <input type="checkbox">
             <label class="task">Pay Bills</label>
@@ -45,7 +45,7 @@
       </section>
       <section class="todo">
         <h3 class="todo__header">Completed</h3>
-        <ul id="completed-tasks">
+        <ul class="todo__ul" id="completed-tasks">
           <li>
             <input type="checkbox" checked>
             <label class="task">See the Doctor</label>
