--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       <section class="todo">
         <h3 class="todo__header">Todo</h3>
         <ul class="todo__ul" id="incomplete-tasks">
-          <li>
+          <li class="todo__li">
             <input type="checkbox">
             <label class="task">Pay Bills</label>
             <input type="text" class="task">
             <button class="edit">Edit</button>
             <button class="delete"><img src="./remove.svg" alt="Remove"></button>
           </li>
-          <li class="edit-mode">
+          <li class="todo__li todo__li_edit">
             <input type="checkbox">
             <label class="task">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task">
@@ -46,7 +46,7 @@
       <section class="todo">
         <h3 class="todo__header">Completed</h3>
         <ul class="todo__ul" id="completed-tasks">
-          <li>
+          <li class="todo__li">
             <input type="checkbox" checked>
             <label class="task">See the Doctor</label>
             <input type="text" class="task">
