--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p id="top-section-for-adding-element-to-list">
           <h3 class="todo__header">Add Item</h3>
           <div class="task-row-wrapper">
-            <input id="new-task" class="task" type="text">
+            <input id="new-task" class="todo__task" type="text">
             <button class="add">Add</button>
           </div>
         </p>
@@ -28,16 +28,16 @@
         <h3 class="todo__header">Todo</h3>
         <ul class="todo__ul" id="incomplete-tasks">
           <li class="todo__li">
-            <input type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task">
+            <input class="todo__checkbox" type="checkbox">
+            <label class="todo__label-task">Pay Bills</label>
+            <input type="text" class="todo__input-task">
             <button class="edit">Edit</button>
             <button class="delete"><img src="./remove.svg" alt="Remove"></button>
           </li>
           <li class="todo__li todo__li_edit">
-            <input type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
+            <input class="todo__checkbox" type="checkbox">
+            <label class="todo__label-task">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="todo__input-task">
             <button class="edit">Save</button>
             <button class="delete"><img src="./remove.svg" alt="Remove"></button>
           </li>
@@ -47,9 +47,9 @@
         <h3 class="todo__header">Completed</h3>
         <ul class="todo__ul" id="completed-tasks">
           <li class="todo__li">
-            <input type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input type="text" class="task">
+            <input class="todo__checkbox" type="checkbox" checked>
+            <label class="todo__label-task">See the Doctor</label>
+            <input type="text" class="todo__input-task">
             <button class="edit">Edit</button>
             <button class="delete"><img src="./remove.svg" alt="Remove"></button>
           </li>
