fix: change text to show mechanism according to rule 2.1 advansed level in index.html, style.css, app.js

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
           <li class="todo__li">
             <input class="todo__checkbox" type="checkbox">
             <label class="todo__label-task">Pay Bills</label>
-            <input type="text" class="todo__input-task">
+            <input type="text" class="todo__input-task todo__input-task_invisible">
             <button class="edit">Edit</button>
             <button class="delete"><img src="./remove.svg" alt="Remove"></button>
           </li>
           <li class="todo__li todo__li_edit">
             <input class="todo__checkbox" type="checkbox">
-            <label class="todo__label-task">Go Shopping</label>
+            <label class="todo__label-task todo__label-task_invisible">Go Shopping</label>
             <input type="text" value="Go Shopping" class="todo__input-task">
             <button class="edit">Save</button>
             <button class="delete"><img src="./remove.svg" alt="Remove"></button>
@@ -48,8 +48,8 @@
         <ul class="todo__ul" id="completed-tasks">
           <li class="todo__li">
             <input class="todo__checkbox" type="checkbox" checked>
-            <label class="todo__label-task">See the Doctor</label>
-            <input type="text" class="todo__input-task">
+            <label class="todo__label-task todo__label-task_comleted">See the Doctor</label>
+            <input type="text" class="todo__input-task todo__input-task_invisible">
             <button class="edit">Edit</button>
             <button class="delete"><img src="./remove.svg" alt="Remove"></button>
           </li>
