--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
             <input class="todo__checkbox" type="checkbox">
             <label class="todo__label-task">Pay Bills</label>
             <input type="text" class="todo__input-task todo__input-task_invisible">
-            <button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg" alt="Remove"></button>
+            <button class="todo__button">Edit</button>
+            <button class="todo__button"><img class="todo__img-del" src="./remove.svg" alt="Remove"></button>
           </li>
-          <li class="todo__li todo__li_edit">
+          <li class="todo__li">
             <input class="todo__checkbox" type="checkbox">
             <label class="todo__label-task todo__label-task_invisible">Go Shopping</label>
             <input type="text" value="Go Shopping" class="todo__input-task">
-            <button class="edit">Save</button>
-            <button class="delete"><img src="./remove.svg" alt="Remove"></button>
+            <button class="todo__button">Save</button>
+            <button class="todo__button"><img class="todo__img-del" src="./remove.svg" alt="Remove"></button>
           </li>
         </ul>
       </section>
@@ -50,8 +50,8 @@
             <input class="todo__checkbox" type="checkbox" checked>
             <label class="todo__label-task todo__label-task_comleted">See the Doctor</label>
             <input type="text" class="todo__input-task todo__input-task_invisible">
-            <button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg" alt="Remove"></button>
+            <button class="todo__button">Edit</button>
+            <button class="todo__button"><img class="todo__img-del" src="./remove.svg" alt="Remove"></button>
           </li>
         </ul>
       </section>
