--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     </div>
     <div class="centered-main-page-element">
       <section class="todo">
-        <p id="top-section-for-adding-element-to-list">
-          <h3 class="todo__header">Add Item</h3>
-          <div class="task-row-wrapper">
+        <h3 class="todo__header">Add Item</h3>
+        <ul class="todo__ul">
+          <li class="todo__li">
             <input id="new-task" class="todo__task" type="text">
             <button class="add">Add</button>
-          </div>
-        </p>
+          </li>
+        </ul>
       </section>
       <section class="todo">
         <h3 class="todo__header">Todo</h3>
