--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <div class="centered-idea-page-element">
+    <div class="centered-wrapper">
       <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
       <a
           class="more-inf"
@@ -14,13 +14,13 @@
           Want more details?
       </a>
     </div>
-    <div class="centered-main-page-element">
+    <div class="centered-wrapper centered-wrapper__text_left">
       <section class="todo">
         <h3 class="todo__header">Add Item</h3>
         <ul class="todo__ul">
-          <li class="todo__li">
-            <input id="new-task" class="todo__task" type="text">
-            <button class="add">Add</button>
+          <li class="todo__li todo__li_no_border">
+            <input id="new-task" class="todo__input-task" type="text">
+            <button class="todo__button">Add</button>
           </li>
         </ul>
       </section>
