--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   </head>
   <body class="page">
     <div class="centered-wrapper">
-      <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-      <a
-          class="more-inf"
-          href="https://goal-life.com/page/method/matrix-eisenhower">
-          Want more details?
-      </a>
+      <header class="header">
+        <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+        <a
+            class="more-inf"
+            href="https://goal-life.com/page/method/matrix-eisenhower">
+            Want more details?
+        </a>
+      </header>
     </div>
     <div class="centered-wrapper centered-wrapper__text_left">
       <section class="todo">
