--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <div class="centered-wrapper">
+    <div class="wrapper wrapper__centered">
       <header class="header">
-        <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+        <img class="header__img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
         <a
-            class="more-inf"
+            class="header__link"
             href="https://goal-life.com/page/method/matrix-eisenhower">
             Want more details?
         </a>
       </header>
     </div>
-    <div class="centered-wrapper centered-wrapper__text_left">
+    <div class="wrapper wrapper__centered wrapper__centered_text_left">
       <section class="todo">
         <h3 class="todo__header">Add Item</h3>
         <ul class="todo__ul">
-          <li class="todo__li todo__li_no_border">
+          <li class="todo__li todo__li_border_none">
             <input id="new-task" class="todo__input-task" type="text">
             <button class="todo__button">Add</button>
           </li>
