--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <div class="wrapper wrapper__centered">
+    <div class="page__wrapper-centered">
       <header class="header">
         <img class="header__img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
         <a
@@ -16,7 +16,7 @@
         </a>
       </header>
     </div>
-    <div class="wrapper wrapper__centered wrapper__centered_text_left">
+    <div class="page__wrapper-centered page__wrapper-centered_text_left">
       <section class="todo">
         <h3 class="todo__header">Add Item</h3>
         <ul class="todo__ul">
